err/django-diario.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/diario'...
Listing './lib/python3.5/site-packages/diario/feeds'...
Listing './lib/python3.5/site-packages/diario/locale'...
Listing './lib/python3.5/site-packages/diario/locale/es'...
Listing './lib/python3.5/site-packages/diario/locale/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/diario/locale/fr'...
Listing './lib/python3.5/site-packages/diario/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/diario/locale/pt_BR'...
Listing './lib/python3.5/site-packages/diario/locale/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/diario/locale/ru'...
Listing './lib/python3.5/site-packages/diario/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/diario/templates'...
Listing './lib/python3.5/site-packages/diario/templates/feeds'...
Listing './lib/python3.5/site-packages/diario/templatetags'...
Compiling './lib/python3.5/site-packages/diario/templatetags/diario_comments.py'...
***   File "./lib/python3.5/site-packages/diario/templatetags/diario_comments.py", line 76
    raise template.TemplateSyntaxError, "Second argument to '%s' tag must be 'as'" % bits[0]
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diario/templatetags/diario_entries.py'...
***   File "./lib/python3.5/site-packages/diario/templatetags/diario_entries.py", line 46
    raise template.TemplateSyntaxError, "'%s' tag takes three arguments" % bits[0]
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/diario/tests'...
Listing './lib/python3.5/site-packages/diario/urls'...
Listing './lib/python3.5/site-packages/diario/views'...
Listing './lib/python3.5/site-packages/django_diario-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
